Version 0.6.2 (2021-12-28)
- Remove deleted entities from device and central collections
- use datetime for last_events

Version 0.6.1 (2021-12-27)
- Display profiles only when hvac_mode auto is enabled
- Fix binary sensor state update for hmip 2-state sensors

Version 0.6.0 (2021-12-27)
- Add climate methods for away mode
- Fix HVAC_MODE_OFF for climate

Version 0.5.1 (2021-12-26)
- Fix hm_light turn_off

Version 0.5.0 (2021-12-25)
- Fix Select Entity
- Remove internal device temperature (ACTUAL_TEMPERATURE CH0)
- Support Cool Mode for IPThermostats
- Display if AWAY_MODE is set on thermostat
- Separate device_address and channel_address

Version 0.4.0 (2021-12-24)
- Use datetime for last_updated (time_initialized)
- Fix example
- Add ACTUAL_TEMPERATURE as separate entity by @towo
- Add HEATING_COOLING to IPThermostat and Group
- Add (*)HUMIDITY and (*)TEMPERATURE as separate entities for Bidcos thermostats
- use ACTIVE_PROFILE in climate presets

Version 0.3.1 (2021-12-23)
- Make HmIP-BSM a switch (only dimable devices should be lights)

Version 0.3.0 (2021-12-23)
- Cleanup API, device/entity
- Add ACTIVE_PROFILE to IPThermostat

Version 0.2.0  (2021-12-22)
- Cleanup API, reduce visibility
- Add setValue to client

Version 0.1.2  (2021-12-21)
- Rotate device identifier

Version 0.1.1  (2021-12-21)
- Remove unnecessary async
- Removed unused helper
- Add interface_id to identifiers in device_info

Version 0.1.0  (2021-12-20)
- Bump version to 0.1.0
- Remove interface_id from get_entity_name and get_custom_entity_name
- Add initial test
- Add coverage config

Version 0.0.22 (2021-12-16)
- Resolve names without interface
- Fix device.entities for virtual remotes
- Remove unused const
- Cache model and primary_client

Version 0.0.21 (2021-12-15)
- Fix number set_state
- Update ignore list
- Fix select entity

Version 0.0.20 (2021-12-14)
- Move caches to classes

Version 0.0.19 (2021-12-12)
- Add helper for address
- Fixes for Hub init

Version 0.0.18 (2021-12-11)